--- a/app/src/main/res/layout/news_item_layout.xml
+++ b/app/src/main/res/layout/news_item_layout.xml
@@ -39,15 +39,34 @@
                 android:textColor="@color/black"
                 android:text="@string/app_name" />
 
-            <TextView
-                android:id="@+id/news_description"
+            <LinearLayout
+                android:id="@+id/news_description_layout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:orientation="horizontal"
                 android:layout_weight="2.5"
-                android:textSize="20sp"
-                android:textColor="@color/black"
+                android:weightSum="10"
                 android:padding="5dp"
-                android:text="@string/app_name" />
+                android:text="@string/app_name" >
+
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="8"
+                    android:id="@+id/news_description"
+                    tools:ignore="NestedWeights" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:id="@+id/share"
+                    android:src="@drawable/share_icon"
+                    android:padding="10dp"/>
+
+
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
