--- a/app/src/main/res/layout/news_item_layout.xml
+++ b/app/src/main/res/layout/news_item_layout.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="380dp"
         android:layout_marginStart="1dp"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="10dp"
         android:layout_marginEnd="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="6"
+                android:scaleType="fitXY"
                 app:srcCompat="@drawable/ic_launcher_background" />
 
             <TextView
