--- a/app/src/main/res/layout/activity_news_description.xml
+++ b/app/src/main/res/layout/activity_news_description.xml
@@ -46,6 +46,7 @@
                 android:orientation="vertical"
                 android:textSize="25sp"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:id="@+id/news_api_text"/>
 
 
